library/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment
  labels:
    app: library
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
        - name: library-app
          image: spring-boot-library-demo/library:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  selector:
    app: library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
